# sotoapp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: .dependency-cruiser.cjs  capsule.html  electron-builder.yml  electron.vite.config.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: bundle-fonts.sh  free-port.mjs  gen-tray-icons.mjs
apps/desktop/src/: capsuleEntry.ts  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: capsule.json  main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: App.svelte  CapsuleShell.svelte  CapsuleShell.test.ts  Sidebar.svelte  Sidebar.test.ts  WindowControls.svelte  bootstrap.ts  platform.ts  sessions.ipc.test.ts  sessions.ipc.ts  windowActions.test.ts  windowActions.ts
apps/desktop/src/features/dictionary/: DictionaryPage.svelte  DictionaryPage.test.ts  dictionary.ipc.test.ts  dictionary.ipc.ts  dictionaryStore.ts
apps/desktop/src/features/history/: HistoryPage.svelte  HistoryPage.test.ts  constants.ts
apps/desktop/src/features/home/: HomePage.svelte  HomePage.test.ts  StatTile.svelte  StatsPanel.svelte  model.test.ts  model.ts
apps/desktop/src/features/modes/: KeyCombo.svelte  ModesPage.svelte  ModesPage.test.ts  PromptEditor.svelte  PromptEditor.test.ts  TriggerEditor.svelte  constants.ts  hotkeyCapture.ts  (+8 more)
apps/desktop/src/i18n/: index.ts  resolveLocale.test.ts  types.ts
apps/desktop/src/ipc/: app.test.ts  app.ts  history.test.ts  history.ts  historyStore.ts  providers.test.ts  providers.ts  settings.test.ts  settings.ts  snapshot.ts
apps/desktop/src/preload/: capsule.commands.ts  capsule.ts  index.commands.ts  index.ts
apps/desktop/src/renderer/: capsule.html  env.d.ts  index.html  ipc.ts  main.tsx
apps/desktop/src/shared/: dataStore.ts  listenWithCleanup.test.ts  listenWithCleanup.ts  modes.ts  nav.ts  theme.ts  voice.test.ts  voice.ts
apps/sotoapp-site/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
apps/sotoapp-site/scripts/: copy-assets.mjs
apps/sotoapp-site/src/: App.svelte  app.css  main.ts  worker.test.ts  worker.ts
apps/sotoapp-site/src/lib/: Capsule.svelte  dmgUrl.test.ts  dmgUrl.ts  icons.ts  platform.test.ts  platform.ts  useLatest.svelte.ts  useLatest.test.ts
apps/sotoapp-site/src/sections/: Download.svelte  Download.test.ts  Features.svelte  Footer.svelte  Hero.svelte
crates/soto-app/: Cargo.toml
crates/soto-app/src/: lib.rs
crates/soto-app/tests/: session_lifecycle.rs
crates/soto-audio/: Cargo.toml
crates/soto-audio/src/: analysis.rs  buffer.rs  conversion.rs  file_recorder.rs  format.rs  lib.rs  native.rs  pcm_stats.rs  queue.rs  wav.rs
crates/soto-audio/tests/: audio_capture_contract.rs
crates/soto-core/: Cargo.toml
crates/soto-core/src/: hotkey.rs  hotwords.rs  lib.rs  models.rs  provider_catalog.rs  stores.rs
crates/soto-core/tests/: mvp_contracts.rs
crates/soto-hotkey/: Cargo.toml
crates/soto-hotkey/src/: lib.rs
crates/soto-hotkey/tests/: session_coordinator_contract.rs
crates/soto-injection/: Cargo.toml
crates/soto-injection/src/: lib.rs
crates/soto-injection/tests/: injection_contract.rs
crates/soto-keyboard-hook/: Cargo.toml
crates/soto-keyboard-hook/src/: lib.rs  macos.rs  matcher.rs  windows.rs
crates/soto-keyboard-hook/tests/: macos_smoke.rs  windows_smoke.rs
crates/soto-platform/: Cargo.toml
crates/soto-platform/src/: lib.rs
crates/soto-platform/tests/: platform_injection_contract.rs
crates/soto-prompt/: Cargo.toml
crates/soto-prompt/prompts/: default.md  translate.md
crates/soto-prompt/src/: lib.rs
crates/soto-provider/: Cargo.toml
crates/soto-provider/src/: errors.rs  lib.rs  provider.rs
crates/soto-provider/src/omni/: chat_completions.rs  mod.rs
crates/soto-provider/tests/: omni_provider_contract.rs
crates/soto-session/: Cargo.toml
crates/soto-session/src/: lib.rs
crates/soto-session/tests/: session_contract.rs
crates/soto-storage/: Cargo.toml
crates/soto-storage/src/: lib.rs
crates/soto-storage/tests/: storage_contract.rs
crates/soto-tauri/: Cargo.toml
crates/soto-tauri/src/: commands.rs  hotkeys.rs  lib.rs  provider_backend.rs  tray.rs  voice_runtime.rs
crates/soto-tauri/tests/: hotkey_registration.rs  hotkey_runtime.rs  provider_backend_smoke.rs  tray_menu.rs
native/macos/: Package.swift  README.md
native/macos/Sources/SotoMacNative/: AppControlBridge.swift  AppControlExports.swift  AudioExports.swift  AxBridge.swift  AxExports.swift  AxValueDecoding.swift  CAbiSupport.swift  ClipboardBridge.swift  ClipboardExports.swift  HookBridge.swift  HotkeyExports.swift  InjectionBridge.swift  InjectionExports.swift  PermissionsBridge.swift  PermissionsExports.swift
native/macos/Tests/SotoMacNativeTests/: AxValueDecodingTests.swift  ClipboardBridgeTests.swift  InjectionBridgeTests.swift
native/windows/: README.md  SotoWinNative.csproj
native/windows/Src/: AppControl.cs  AudioControl.cs  AxBridge.cs  ClipboardBridge.cs  Exports.cs  Geometry.cs  HookBridge.cs  InjectionBridge.cs  PermissionsBridge.cs
scripts/: check-renderer-bundle-budget.mjs  check-renderer-bundle-budget.test.mjs  check-renderer-no-zod.mjs  check-renderer-no-zod.test.mjs  gen-cue-wavs.mjs  generate-latest-json.mjs  generate-latest-json.test.mjs  install-canonical-macos-app.mjs  install-canonical-macos-app.test.mjs  macos-entitlements.test.mjs  macos-signed-build.mjs  macos-signed-build.test.mjs  publish-updater-r2.mjs  publish-updater-r2.test.mjs  reset-canonical-tcc.mjs  reset-canonical-tcc.test.mjs  sign-macos.mjs  sign-macos.test.mjs  smoke-package-macos.mjs  smoke-package-macos.test.mjs  smoke-windows-uia-capture.mjs  subset-fonts.mjs  verify-windows-native-package.mjs  windows-native-package.test.mjs  windows-uia-capture-smoke.test.mjs
(+256 files in other folders)
