[package]
name = "soto-platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arboard.workspace = true
serde.workspace = true
soto-core = { path = "../soto-core" }
soto-injection = { path = "../soto-injection" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2.workspace = true
objc2.workspace = true
