[package]
name = "soto-provider"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
soto-audio = { path = "../soto-audio" }
soto-core = { path = "../soto-core" }
soto-prompt = { path = "../soto-prompt" }
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
tokio.workspace = true
