[package]
name = "soto-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
soto-injection = { path = "../soto-injection", optional = true }
soto-core = { path = "../soto-core" }
soto-storage = { path = "../soto-storage" }
uuid.workspace = true

[features]
default = ["injection"]
injection = ["dep:soto-injection"]

[dev-dependencies]
tempfile.workspace = true
