[package]
name = "soto-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
soto-core = { path = "../soto-core" }
soto-keyboard-hook = { path = "../soto-keyboard-hook" }
soto-prompt = { path = "../soto-prompt" }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
