[package]
name = "soto-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
soto-app = { path = "../soto-app" }
soto-audio = { path = "../soto-audio" }
soto-core = { path = "../soto-core" }
soto-hotkey = { path = "../soto-hotkey" }
soto-keyboard-hook = { path = "../soto-keyboard-hook" }
soto-platform = { path = "../soto-platform" }
soto-prompt = { path = "../soto-prompt" }
soto-provider = { path = "../soto-provider" }
soto-session = { path = "../soto-session" }
soto-storage = { path = "../soto-storage" }
tauri.workspace = true
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.1"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
tauri = { workspace = true, features = ["macos-private-api"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
