[package]
name = "soto-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
serde_json.workspace = true
soto-tauri = { path = "../../../crates/soto-tauri" }
# Keep this explicit instead of workspace-inherited: Tauri CLI manages/checks
# app-crate features directly and emits repeated warnings for inherited deps.
tauri = { version = "2.11.1", features = ["macos-private-api", "tray-icon"] }
# Keep plugin deps direct here too so Tauri's app-crate build script discovers
# their ACL permission manifests while runtime registration stays in soto-tauri.
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.1"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }
